public-info/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-info-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-info-app
  template:
    metadata:
      labels:
        app: public-info-app
    spec:
      containers:
        - name: container
          image: doxa80/public-info-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8091
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
