public-info/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-info-app-service
  namespace: default
spec:
  selector:
    app: public-info-app
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
  type: ClusterIP
