public-info/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  name: public-info-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: public-info-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-info-app-service
                port:
                  number: 80
